--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -34,9 +34,11 @@
     <div class="masthead">
         <h3 class="text-muted">J'y Accède</h3>
         <ul class="nav nav-justified">
-            <li class="active"><a href="{{ path("jyacc_homepage") }}">Home</a></li>
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Twitter</a></li>
+            <li><a href="{{ path("jyacc_homepage") }}">Home</a></li>
+            <li><a href="{{ path("jacc_search") }}">Lieux</a></li>
+            <li><a href="{{ path("jacc_list") }}">Arrêts/Lignes</a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=100005437036288" target="_blank">Facebook</a></li>
+            <li><a href="https://twitter.com/Jyaccede" target="_blank">Twitter</a></li>
         </ul>
     </div>
     {% endblock %}
@@ -44,8 +46,7 @@
     {% block market %}
     <!-- Jumbotron -->
     <div class="jumbotron">
-        <h1>Trouvez votre chemin aménagé en quelques clics.</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet.</p>
+        <h1>Trouvez des lieux accessibles en quelques clics.</h1>
         <p><a class="btn btn-lg btn-success" href="{{ path("jacc_search") }}" role="button">C'est par ici !</a></p>
     </div>
     {% endblock %}
