--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -48,6 +48,7 @@
     <div class="jumbotron">
         <h1>Trouvez des lieux accessibles en quelques clics.</h1>
         <p><a class="btn btn-lg btn-success" href="{{ path("jacc_search") }}" role="button">C'est par ici !</a></p>
+        <p class="lead">Vous pouvez obtenir l'application à l'adresse suivante : <a href="https://github.com/lelexxx/jyaccede" target="_blank">J'y accede</a></p>
     </div>
     {% endblock %}
 
